--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .dropdown {
+  position: relative;
+  padding-left: 2%;
+  padding-top: 2%;
+}
+
+.dropbox {
   position: absolute;
-  padding-left: 20px;
+  z-index: 1;
+  background-color: white;
 }
 
 ul {
@@ -23,8 +30,34 @@ li:hover {
 }
 
 .vertical-line {
+  position: relative;
   border-left: 1px solid black;
-  height: 90%;
-  position: absolute;
-  left: 55%;
+  height: 760px;
+  float: left;
+}
+
+.container-box{
+  outline: 1px solid black;
+  margin: 2% 2% 2% 2%;
+  float: left;
+  padding: 20px;
+  width: 42%;
+  height: 700px;
+}
+
+.displays {
+  position: relative;
+  overflow: hidden;
+}
+
+.address-box{
+  outline: 1px solid black;
+  padding: 2%;
+  margin-top: 5%;
+  box-shadow: 0 3px 3px 2px rgba(0, 0, 0, 0.14);
+}
+
+.address-box:hover {
+  background-color: rgba(0, 0, 0, 0.14);
+  cursor: pointer;
 }
